# sim_cli

./: .gitignore  Cargo.toml  architecture.html  build.rs  messages.html  o.bat  tasks.toml
docs/: task.md
proto/: sim.proto
src/: backend.rs  commands.rs  event.rs  filter.rs  frontend.rs  help.rs  json_framer.rs  log_buffer.rs  main.rs  message.rs  mock_llm.rs  msg_log.rs  proto.rs  scroll.rs  terminal.rs
src/backend/: chat.rs  conn.rs  dispatch.rs  llm.rs  mod.rs  modal.rs  task.rs
src/backend/task/: conn_actor.rs  demo_actor.rs  mod.rs  registry.rs
src/tool/: conn.rs  demo.rs  mod.rs  registry.rs
src/transport/: mod.rs  tcp.rs  zmq.rs
src/ui/: conversation.rs  input.rs  markdown.rs  mod.rs  modal.rs  ratatui_renderer.rs  render_state.rs  renderer.rs  state_panel.rs  statusline.rs  tab_bar.rs  tool_card.rs
