[package]
name = "sim_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
serde_json = "1"
tokio-stream = "0.1"
futures = "0.3"
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zeromq = { version = "0.6", default-features = false, features = ["tokio-runtime", "tcp-transport"] }
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
