[package]
name = "sim_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
serde_json = "1"
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zeromq = { version = "0.6", default-features = false, features = ["tokio-runtime", "tcp-transport"] }
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

# ---------------------------------------------------------------------------
# Release profile: tuned for binary size (embedded Linux target).
# Compile time increases ~2-3x vs default release, but binary shrinks ~40-50%.
# ---------------------------------------------------------------------------
[profile.release]
# "z" = optimize aggressively for size (slower than "s" but smaller).
# Default is "3" (speed). For a CLI tool the perf difference is unnoticeable.
opt-level = "z"

# Link-time optimization across all crates. Removes dead code that spans
# crate boundaries (e.g. ratatui widgets we never instantiate).
# "fat" is slower to link but produces slightly smaller binaries than "thin".
lto = "fat"

# Single code-generation unit lets LLVM see the entire program at once,
# enabling more inlining / dead-code elimination. Trade-off: slower compile.
codegen-units = 1

# Abort on panic instead of unwinding. Removes the unwind tables and
# landing-pad code from every function (~5-8% binary size).
# Safe because: (a) we don't catch panics anywhere, (b) tokio tasks that
# panic already abort the process, (c) Task 6 will remove all remaining
# panic!() / expect() calls in production code paths.
panic = "abort"

# Strip debug symbols from the release binary. Does not affect panic
# messages or error formatting — only removes DWARF debuginfo sections.
strip = "debuginfo"
